# rayon

./: .gitignore  Cargo.toml  TODO
src/: basics.rs  lib.rs  main.rs
src/basics/: mod.rs  ray.rs  solvers.rs  trans.rs
src/camera/: mod.rs
src/functions/: checker.rs  chequered.rs  gradient.rs  mod.rs  noise.rs  vectorize.rs
src/functions/noise/: mod.rs  primitive.rs  scalar.rs  seeding.rs  vector.rs
src/functions/pigment/: mod.rs
src/intersectable/: cylinder.rs  mod.rs  plane.rs  sphere.rs  textured.rs  transformed.rs  union.rs
src/intersectable/csg/: intersection.rs  mod.rs
src/medium/: mod.rs
src/post/: mod.rs
src/renderer/: mod.rs  worker.rs
src/scene/: mod.rs
src/texture/: emissive.rs  glass.rs  lambertian.rs  mod.rs  pigment.rs
