[package]
name = "rayon"
version = "0.1.0"
authors = ["christoffer"]

[dependencies]
image = "0.10.3"
lazy_static = "0.2.1"
nalgebra = "0.10.1"
noise = "0.2.0"
num = "0.1.36"
rand = "0.3.14"

[profile.release]
lto = true
opt-level = 3

# [[bin]]
# name = "scene-constructor"
# path = "src/bin/scene-constructor/main.rs"

[[bin]]
name = "renderer"
path = "src/bin/renderer/main.rs"
